--- a/bios_tool/host_config.yml
+++ b/bios_tool/host_config.yml
@@ -1,41 +1,59 @@
 hosts:
   # Hpe servers
-  - name: 172.29.3.1
+  - name: 172.29.3.11
     user: Administrator
     password: Administrator
-  - name: 172.29.3.2
-    user: Administrator
-    password: Administrator
-  - name: 172.29.3.3
+#  - name: 172.29.3.12
 #    user: Administrator
 #    password: Administrator
-#  - name: 172.29.3.4
+#  - name: 172.29.3.13
 #    user: Administrator
 #    password: Administrator
-#  - name: 172.29.3.5
+#  - name: 172.29.3.14
 #    user: Administrator
 #    password: Administrator
-#  - name: 172.29.3.6
+#  - name: 172.29.3.15
 #    user: Administrator
 #    password: Administrator
-#  - name: 172.29.3.7
+#  - name: 172.29.3.16
 #    user: Administrator
 #    password: Administrator
-#  - name: 172.29.3.8
+#  - name: 172.29.3.17
 #    user: Administrator
 #    password: Administrator
-#  - name: 172.29.3.9
+#  - name: 172.29.3.18
 #    user: Administrator
 #    password: Administrator
-#  - name: 172.29.3.10
+#  - name: 172.29.3.19
+#    user: Administrator
+#    password: Administrator
+#  - name: 172.29.3.20
 #    user: Administrator
 #    password: Administrator
 #
 #  # Dell servers
 #  # 172.29.1.170 - 177, root/Administrator for the idrac login
-  - name: 172.29.1.170
-    user: root
-    password: Administrator
-  - name: 172.29.1.171
-    user: root
-    password: Administrator
+#  - name: 172.29.1.170
+#    user: root
+#    password: Administrator
+#  - name: 172.29.1.171
+#    user: root
+#    password: Administrator
+#  - name: 172.29.1.172
+#    user: root
+#    password: Administrator
+#  - name: 172.29.1.173
+#    user: root
+#    password: Administrator
+#  - name: 172.29.1.174
+#    user: root
+#    password: Administrator
+#  - name: 172.29.1.175
+#    user: root
+#    password: Administrator
+#  - name: 172.29.1.176
+#    user: root
+#    password: Administrator
+#  - name: 172.29.1.177
+#    user: root
+#    password: Administrator
