--- a/bios_tool/bios_settings.yml
+++ b/bios_tool/bios_settings.yml
@@ -64,11 +64,12 @@ Supermicro:
   AMD:
     ACPISRATL3CacheAsNUMADomain: Disabled
     IOMMU: Disabled
-    NUMANodesPerSocket: Auto
+    NUMANodesPerSocket: NPS1
     SMTControl: Disabled
-    SR-IOVSupport: Enabled
     DFCstates: Disabled
-    GlobalC-stateControl: Disabled
+    GlobalC_stateControl: Disabled
+    DeterminismControl: Manual
+    DeterminismEnable: "Enable Performance Determinism"
   Intel:
     EnhancedHaltState(C1E): Disabled
     HardwareP-States: Disabled
@@ -84,11 +85,10 @@ Lenovo:
     Processors_P_state2: Disabled
     Processors_GlobalC_stateControl: Disabled
     Processors_DeterminismSlider: Performance
+    Processors_DFC_States: Disabled
     DevicesandIOPorts_IOMMU: Disabled
     Processors_SMTMode: Disabled
-    Processors_DFC_States: Disabled
     Power_PCIePowerBrake: Disabled
     OperatingModes_ChooseOperatingMode: CustomMode
     LegacyBIOS_LegacyBIOS: Disabled
     Processors_SOCP_states: P0
-    
