Updated Known issues for systemd issues

--- a/weka_upgrade_checker/known_issues.json
+++ b/weka_upgrade_checker/known_issues.json
@@ -8,9 +8,27 @@
             "obj_store": false
         }
     ],
+    "4.2.18": [
+        {
+            "description": "If the weka-agent init.d or systemd unit files have been modified, remove them up before upgrading.",
+            "related_protocols": [],
+            "link_types": [],
+            "version_from": [],
+            "obj_store": false
+        }
+    ],
+    "4.2.15": [
+        {
+            "description": "If the weka-agent init.d or systemd unit files have been modified, remove them up before upgrading.",
+            "related_protocols": [],
+            "link_types": [],
+            "version_from": [],
+            "obj_store": false
+        }
+    ],
     "4.2.12": [
         {
-            "description": "",
+            "description": "If the weka-agent init.d or systemd unit files have been modified, remove them up before upgrading.",
             "related_protocols": [],
             "link_types": [],
             "version_from": [],
