--- a/weka_upgrade_checker/known_issues.json
+++ b/weka_upgrade_checker/known_issues.json
@@ -10,7 +10,16 @@
     ],
     "4.2.18": [
         {
-            "description": "If the weka-agent init.d or systemd unit files have been modified, remove them before upgrading.",
+            "description": "If the weka-agent init.d or systemd unit files have been modified, remove them up before upgrading.",
+            "related_protocols": [],
+            "link_types": [],
+            "version_from": [],
+            "obj_store": false
+        }
+    ],
+    "4.2.16": [
+        {
+            "description": "If the weka-agent init.d or systemd unit files have been modified, remove them up before upgrading.",
             "related_protocols": [],
             "link_types": [],
             "version_from": [],
@@ -19,7 +28,16 @@
     ],
     "4.2.15": [
         {
-            "description": "If the weka-agent init.d or systemd unit files have been modified, remove them before upgrading.",
+            "description": "If the weka-agent init.d or systemd unit files have been modified, remove them up before upgrading.",
+            "related_protocols": [],
+            "link_types": [],
+            "version_from": [],
+            "obj_store": false
+        }
+    ],
+    "4.2.14": [
+        {
+            "description": "If the weka-agent init.d or systemd unit files have been modified, remove them up before upgrading.",
             "related_protocols": [],
             "link_types": [],
             "version_from": [],
@@ -28,7 +46,7 @@
     ],
     "4.2.12": [
         {
-            "description": "If the weka-agent init.d or systemd unit files have been modified, remove them before upgrading.",
+            "description": "If the weka-agent init.d or systemd unit files have been modified, remove them up before upgrading.",
             "related_protocols": [],
             "link_types": [],
             "version_from": [],
