--- a/weka_upgrade_checker/known_issues.json
+++ b/weka_upgrade_checker/known_issues.json
@@ -1,4 +1,59 @@
 {
+    "5.0.2.119": [
+        {
+            "description": "Weka tsmb-server continuously restarts attempting to reach unavailable AD/LDAP servers",
+            "related_protocols": ["smb"],
+            "link_types": [ ],
+            "problematic_kernel_arguments": [ ],
+            "internal_reference": "WEKAPP-513906 | https://wekaio.lightning.force.com/lightning/r/Knowledge__kav/ka0Qr0000008V3RIAU/view",
+            "version_from": [],
+            "obj_store": false
+        }
+    ],
+    "5.0.1.101": [
+        {
+            "description": "Weka tsmb-server continuously restarts attempting to reach unavailable AD/LDAP servers",
+            "related_protocols": ["smb"],
+            "link_types": [ ],
+            "problematic_kernel_arguments": [ ],
+            "internal_reference": "WEKAPP-513906 | https://wekaio.lightning.force.com/lightning/r/Knowledge__kav/ka0Qr0000008V3RIAU/view",
+            "version_from": [],
+            "obj_store": false
+        }
+    ],
+    "4.4.8.76": [
+        {
+            "description": "Weka tsmb-server continuously restarts attempting to reach unavailable AD/LDAP servers",
+            "related_protocols": ["smb"],
+            "link_types": [ ],
+            "problematic_kernel_arguments": [ ],
+            "internal_reference": "WEKAPP-513906 | https://wekaio.lightning.force.com/lightning/r/Knowledge__kav/ka0Qr0000008V3RIAU/view",
+            "version_from": [],
+            "obj_store": false
+        }
+    ],
+    "4.4.8.66": [
+        {
+            "description": "Weka tsmb-server continuously restarts attempting to reach unavailable AD/LDAP servers",
+            "related_protocols": ["smb"],
+            "link_types": [ ],
+            "problematic_kernel_arguments": [ ],
+            "internal_reference": "WEKAPP-513906 | https://wekaio.lightning.force.com/lightning/r/Knowledge__kav/ka0Qr0000008V3RIAU/view",
+            "version_from": [],
+            "obj_store": false
+        }
+    ],
+    "4.4.8.53": [
+        {
+            "description": "Weka tsmb-server continuously restarts attempting to reach unavailable AD/LDAP servers",
+            "related_protocols": ["smb"],
+            "link_types": [ ],
+            "problematic_kernel_arguments": [ ],
+            "internal_reference": "WEKAPP-513906 | https://wekaio.lightning.force.com/lightning/r/Knowledge__kav/ka0Qr0000008V3RIAU/view",
+            "version_from": [],
+            "obj_store": false
+        }
+    ],
     "4.4.7.89": [
         {
             "description": "IOMMU enabled in passthrough mode",
@@ -6,6 +61,48 @@
             "link_types": [],
             "problematic_kernel_arguments": [ "iommu=pt" ],
             "internal_reference": "WEKAPP-513581",
+            "version_from": [],
+            "obj_store": false
+        },
+       {
+            "description": "Weka tsmb-server continuously restarts attempting to reach unavailable AD/LDAP servers",
+            "related_protocols": ["smb"],
+            "link_types": [],
+            "problematic_kernel_arguments": [ ],
+            "internal_reference": "WEKAPP-513906 | https://wekaio.lightning.force.com/lightning/r/Knowledge__kav/ka0Qr0000008V3RIAU/view",
+            "version_from": [],
+            "obj_store": false
+        }
+    ],
+    "4.4.6.122": [
+        {
+            "description": "Weka tsmb-server continuously restarts attempting to reach unavailable AD/LDAP servers",
+            "related_protocols": ["smb"],
+            "link_types": [ ],
+            "problematic_kernel_arguments": [ ],
+            "internal_reference": "WEKAPP-513906 | https://wekaio.lightning.force.com/lightning/r/Knowledge__kav/ka0Qr0000008V3RIAU/view",
+            "version_from": [],
+            "obj_store": false
+        }
+    ],
+    "4.4.6.114": [
+        {
+            "description": "Weka tsmb-server continuously restarts attempting to reach unavailable AD/LDAP servers",
+            "related_protocols": ["smb"],
+            "link_types": [ ],
+            "problematic_kernel_arguments": [ ],
+            "internal_reference": "WEKAPP-513906 | https://wekaio.lightning.force.com/lightning/r/Knowledge__kav/ka0Qr0000008V3RIAU/view",
+            "version_from": [],
+            "obj_store": false
+        }
+    ],
+    "4.4.6": [
+        {
+            "description": "Weka tsmb-server continuously restarts attempting to reach unavailable AD/LDAP servers",
+            "related_protocols": ["smb"],
+            "link_types": [ ],
+            "problematic_kernel_arguments": [ ],
+            "internal_reference": "WEKAPP-513906 | https://wekaio.lightning.force.com/lightning/r/Knowledge__kav/ka0Qr0000008V3RIAU/view",
             "version_from": [],
             "obj_store": false
         }
@@ -68,17 +165,6 @@
     "4.2.12": [
         {
             "description": "If the weka-agent init.d or systemd unit files have been modified, revert all changes and restore them to their original state.",
-            "related_protocols": [],
-            "link_types": [],
-            "problematic_kernel_arguments": [],
-            "internal_reference": "",
-            "version_from": [],
-            "obj_store": false
-        }
-    ],
-    "4.2.13": [
-        {
-            "description": "",
             "related_protocols": [],
             "link_types": [],
             "problematic_kernel_arguments": [],
