Garrett: always turn off HT

--- a/bios_tool/bios_settings.yml
+++ b/bios_tool/bios_settings.yml
@@ -1,8 +1,7 @@
 WEKA:
   AMD:
     '*':
-      #WEKApod - R6615:
-      LogicalProc: Enabled
+      LogicalProc: Disabled
       NumaNodesPerSocket: "1"
       PcieAspmL1: Disabled
       ProcCStates: Disabled
@@ -18,11 +17,32 @@ WEKA:
       BootMode: Uefi
       SecureBoot: Disabled
       SerialComm: OnConRedir
+      IommuSupport: Disabled
+      ProcX2Apic: Disabled
+    WEKApod - R6615:
+      LogicalProc: Disabled
+      NumaNodesPerSocket: "1"
+      PcieAspmL1: Disabled
+      ProcCStates: Disabled
+      ProcPwrPerf: MaxPerf
+      ProcVirtualization: Disabled
+      SysProfile: Custom
+      WorkloadProfile: NotConfigured
+      DeterminismSlider: PerfDeterminism
+      DfCState: Disabled
+      DfPstateFreqOptimizer: Disabled
+      DfPstateLatencyOptimizer: Disabled
+      PowerProfileSelect: MaxIOPerformanceMode
+      BootMode: Uefi
+      SecureBoot: Disabled
+      SerialComm: OnConRedir
+      IommuSupport: Disabled
+      ProcX2Apic: Disabled
 
 Dell Inc.:
   AMD:
     PowerEdge R6615:
-      LogicalProc: Enabled
+      LogicalProc: Disabled
       NumaNodesPerSocket: "1"
       PcieAspmL1: Disabled
       ProcCStates: Disabled
@@ -38,8 +58,10 @@ Dell Inc.:
       BootMode: Uefi
       SecureBoot: Disabled
       SerialComm: OnConRedir
+      IommuSupport: Disabled
+      ProcX2Apic: Disabled
     '*':
-      LogicalProc: Enabled
+      LogicalProc: Disabled
       NumaNodesPerSocket: "1"
       PcieAspmL1: Disabled
       ProcCStates: Disabled
@@ -106,7 +128,7 @@ HPE:
       NumaGroupSizeOpt: Clustered
       PerformanceDeterminism: PerformanceDeterministic
       PowerRegulator: StaticHighPerf
-      ProcSMT: Enabled
+      ProcSMT: Disabled
       ProcAmdIoVt: Disabled
       BootMode: Uefi
       SecureBootStatus: Disabled
@@ -125,7 +147,7 @@ HPE:
       NumaGroupSizeOpt: Clustered
       PerformanceDeterminism: PerformanceDeterministic
       PowerRegulator: StaticHighPerf
-      ProcSMT: Enabled
+      ProcSMT: Disabled
       ProcAmdIoVt: Disabled
       BootMode: Uefi
       SecureBootStatus: Disabled
@@ -146,12 +168,12 @@ Supermicro:
       IOMMU_00EA: Disabled
       NUMANodesPerSocket_703E: NPS1
       PowerProfileSelection_00F8: Maximum IO Performance Mode
-      SMTControl_00CB: Enabled
+      SMTControl_00CB: Disabled
     '*':
       ACPISRATL3CacheAsNUMADomain: Disabled
       IOMMU: Disabled
       NUMANodesPerSocket: NPS1
-      SMTControl: Enabled
+      SMTControl: Disabled
       DFCstates: Disabled
       GlobalC_stateControl: Disabled
       DeterminismControl: Manual
@@ -175,7 +197,7 @@ Lenovo:
       Processors_DeterminismSlider: Performance
       Processors_DFC_States: Disabled
       DevicesandIOPorts_IOMMU: Disabled
-      Processors_SMTMode: Enabled
+      Processors_SMTMode: Disabled
       Power_PCIePowerBrake: Disabled
       OperatingModes_ChooseOperatingMode: CustomMode
       LegacyBIOS_LegacyBIOS: Disabled
@@ -188,7 +210,7 @@ Lenovo:
       Processors_DeterminismSlider: Performance
       Processors_DFC_States: Disabled
       DevicesandIOPorts_IOMMU: Disabled
-      Processors_SMTMode: Enabled
+      Processors_SMTMode: Disabled
       Power_PCIePowerBrake: Disabled
       OperatingModes_ChooseOperatingMode: CustomMode
       LegacyBIOS_LegacyBIOS: Disabled
