Update known issues & fixes
- Update known issues, for WEKAPP-562863, to include 5.x.
- Make S3 host parsing more robust
- Make CX-4 NIC checks more robust

--- a/weka_upgrade_checker/known_issues.json
+++ b/weka_upgrade_checker/known_issues.json
@@ -10,6 +10,10 @@
             {
                 "min": "4.4.6",
                 "max": "4.4.20"
+            },
+            {
+                "min": "5.0.4",
+                "max": "5.1.0"
             }
         ],
         "multi_org": true,
